fix: исправлена JWT авторизация в Swagger UI и обновлен README.md
- Исправлена генерация и валидация JWT токенов
- Настроена правильная работа Swagger UI с Bearer токенами
- Обновлен README.md с подробными инструкциями по запуску
- Добавлена пошаговая инструкция по работе со Swagger
- Исправлены пути запуска для Docker и локальной разработки
- Унифицировано время жизни токена до 120 минут
- Добавлена таблица частых ошибок и решений

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,11 @@ services:
     environment:
       # Используем отдельную папку внутри контейнера для файла БД
       - ConnectionStrings__DefaultConnection=Data Source=/app/data/tasks.db
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - Jwt__SecretKey=super_secret_development_key_change_me_for_docker
+      - Jwt__Issuer=TaskManagement.Api
+      - Jwt__Audience=TaskManagement.Client
+      - Jwt__ExpirationMinutes=120
     volumes:
       - tasks-data:/app/data
     ports:
